tests/pos/projection.scala
//> using options -source 3.2

class C { type T }
object test {
  def x: C#T = ???
}
